# simple-engine-cpp

./: .gitignore  CMakeLists.txt  README.md
assets/: checker.ppm
src/: main.cpp
src/core/: Logger.cpp  Logger.h
src/engine/: Application.cpp  Application.h  Camera.cpp  Camera.h  Collision.cpp  Collision.h  Engine.cpp  Engine.h  GLFunctions.cpp  GLFunctions.h  IGame.cpp  IGame.h  Input.cpp  Input.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ParallaxLayer.cpp  ParallaxLayer.h  PlayerController.cpp  PlayerController.h  PrimitiveFactory.cpp  PrimitiveFactory.h  RenderObject.cpp  RenderObject.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  (+8 more)
src/game/: Game.cpp  Game.h  GameScene.cpp  GameScene.h  GameState.cpp  GameState.h  GameplayState.cpp  GameplayState.h  MainMenuState.cpp  MainMenuState.h  PauseState.cpp  PauseState.h  PlayerController.cpp  PlayerController.h  UIButton.cpp  UIButton.h
